Add back link to tests questions view

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -23,5 +23,9 @@
  <tr>
    <td colspan="3"><%= link_to('new question', new_test_question_path(@test)) %></td>
  </tr>
+ <tr>
+   <td colspan="3"><%= link_to('back', tests_path) %></td>
+ </tr>
+</table>
 </table>
 <%= render 'shared/footer' %>
