--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -13,13 +13,7 @@
   <tr>
     <th colspan="3">Questions</th>
   </tr>
-  <% for question in @test.questions %>
-    <tr>
-      <td><%= question.statement %></td>
-      <td><%= link_to('edit', edit_question_path(question)) %></td>
-      <td><%= link_to('delete', question, data: { confirm: 'Are you sure?' }, method: :delete) %></td>
-    </tr>
- <% end %>
+  <%= render @test.questions %>
  <tr>
    <td colspan="3"><%= link_to('new question', new_test_question_path(@test)) %></td>
  </tr>
