--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -4,10 +4,5 @@
     <th>Title</th>
     <th>Number of questions</th>
   </tr>
-  <% @tests.each do |test| %>
-    <tr>
-      <td><%= link_to(test.title, test_questions_path(test)) %></td>
-      <td><%= test.questions.count %></td>
-    </tr>
-  <% end %>
+  <%= render @tests %>
 </table>
