--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,4 +1,6 @@
 <tr>
-  <td><%= link_to(test.title, test_questions_path(test)) %></td>
+  <td><%= link_to(test.title, test) %></td>
   <td><%= test.questions.count %></td>
+  <td><%= link_to('edit', edit_test_path(test)) %></td>
+  <td><%= link_to('delete', test, data: { confirm: 'Are you sure?' }, method: :delete) %></td>
 </tr>
