Add link to the question from the test page

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= question.statement %></td>
+  <td><%= link_to(question.statement, question) %></td>
   <td><%= link_to('edit', edit_question_path(question)) %></td>
   <td><%= link_to('delete', question, data: { confirm: 'Are you sure?' }, method: :delete) %></td>
 </tr>
