--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,6 +8,6 @@
     <td><%= @question.statement %></td>
   </tr>
   <tr>
-    <td colspan="2"><%= link_to('back', test_questions_path(@test)) %></td>
+    <td colspan="2"><%= link_to('back', @test) %></td>
   </tr>
 </table>
