Create new partial _form instead of _form_fields

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,3 +1,5 @@
+<%= form_with model: [@test, @question] do |form| %>
 <p><%= form.label :statement, "Statement" %>
 <%= form.text_field :statement %></p>
 <p><%= form.submit %></p>
+<% end %>
