--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,4 @@
 <%= question_header(@question) %>
 <%= render partial: 'shared/errors', locals: { resource: @question } %>
-<%= form_with model: @question do |form| %>
-<%= render partial: 'form_fields', locals: { form: form } %>
-<% end %>
-<%= link_to('back', @test) %>
+<%= render 'form' %>
+<%= link_to('back', @question.test) %>
