--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,9 @@
 <header>
-  <% if logged_in? %>
+  <% if user_signed_in? %>
     <%= link_to("Welcome, #{current_user.login} Guru", tests_path) %>
-    <%= link_to('Signout', signout_path, method: :delete) %>
+    <%= link_to('Signout', destroy_user_session_path, method: :delete) %>
   <% else %>
-    <%= link_to('Signin', signin_path) %>
-    <%= link_to('Signup', signup_path) %>
+    <%= link_to('Signin', new_user_session_path) %>
+    <%= link_to('Signup', new_user_registration_path) %>
   <% end %>
 </header>
