--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -8,7 +8,7 @@
   </tr>
   <tr>
     <td>Creator</td>
-    <td colspan="2"><%= @test.creator.login %></td>
+    <td colspan="2"><%= @test.creator.show_initials %></td>
   </tr>
   <tr>
   <tr>
