--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <% if user_signed_in? %>
-    <%= link_to("Welcome, #{current_user.login} Guru", tests_path) %>
+    <%= link_to("Welcome, #{current_user.first_name} Guru", tests_path) %>
     <%= link_to('Signout', destroy_user_session_path, method: :delete) %>
   <% else %>
     <%= link_to('Signin', new_user_session_path) %>
