--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -6,6 +6,6 @@
   <p><%= form.label :category_id, "Category" %>
   <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %></p>
   <p><%= form.label :creator_id, "Creator" %>
-  <%= form.collection_select :creator_id, User.all, :id, :login, prompt: true %></p>
+  <%= form.collection_select :creator_id, User.all, :id, :show_initials, prompt: true %></p>
   <p><%= form.submit %></p>
 <% end %>
