--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@question, @answer] do |form| %>
+<%= form_with model: [:admin, @question, @answer] do |form| %>
   <p><%= form.label :statement, 'Statement' %>
   <%= form.text_field :statement %></p>
   <p><%= form.label :correct, 'Is correct' %>
