--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@test, @question] do |form| %>
+<%= form_with model: [:admin, @test, @question] do |form| %>
 <p><%= form.label :statement, "Statement" %>
 <%= form.text_field :statement %></p>
 <p><%= form.submit %></p>
