--- a/app/views/admin/questions/edit.html.erb
+++ b/app/views/admin/questions/edit.html.erb
@@ -1,4 +1,4 @@
 <%= question_header(@question) %>
 <%= render partial: 'shared/errors', locals: { resource: @question } %>
 <%= render 'form' %>
-<%= link_to('back', @question.test) %>
+<%= link_to('back', admin_test_path(@question.test)) %>
