--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -3,7 +3,8 @@
   <tr>
     <th>Title</th>
     <th>Number of questions</th>
-    <th>Actions</th>
+    <th colspan="3">Actions</th>
   </tr>
   <%= render @tests %>
+  <tr><td colspan="5"><%= link_to('new test', :new_admin_test) %></td></tr>
 </table>
