--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,7 +1,8 @@
 <tr>
   <td><%= link_to(test.title, test) %></td>
   <td><%= test.questions.count %></td>
-  <td><%= button_to('start passage', start_test_path(test), method: :get) %></td>
-  <td><%= link_to('edit', edit_test_path(test)) %></td>
-  <td><%= link_to('delete', test, data: { confirm: 'Are you sure?' }, method: :delete) %></td>
+
+  <% if user_signed_in? %>
+    <td><%= button_to('start passage', start_test_path(test), method: :get) %></td>
+  <% end %>
 </tr>
