Add ability to gist the question

--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -10,3 +10,4 @@
   <% end %>
   <%= form.submit 'Next' %>
 <% end %>
+<p><%= link_to('Gist question', gist_test_passage_path(@test_passage), method: :post) %></p>
