Add gist resource to admin namespace

--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -7,4 +7,5 @@
   </tr>
   <%= render @tests %>
   <tr><td colspan="5"><%= link_to('new test', :new_admin_test) %></td></tr>
+  <tr><td colspan="5"><%= link_to('show gists', :admin_gists) %></td>
 </table>
