--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render 'shared/header' %>
-    <p class="notice"><%= notice %></p>
+    <p class="notice"><%= sanitize(notice) %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
     <%= render 'shared/footer' %>
