--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -10,7 +10,4 @@
   <% end %>
   <%= form.submit 'Next' %>
 <% end %>
-<%= form_with model: Gist.new do |f| %>
-  <%= f.hidden_field :test_passage_id, value: @test_passage.id %>
-  <%= f.submit "Gist question" %>
-<% end %>
+<%= link_to('Gist question', gists_path(test_passage_id: @test_passage.id), method: :post) %>
