--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,8 +1,8 @@
 <h1>All tests</h1>
 <table>
   <tr>
-    <th class="pointer sort-by-title">Title <%= octicon "arrow-up", class: 'hide' %>
-                                            <%= octicon "arrow-down", class: 'hide' %></th>
+    <th class="pointer js-sort-by-title">Title <%= octicon "arrow-up", class: 'hide' %>
+                                               <%= octicon "arrow-down", class: 'hide' %></th>
     <th>Number of questions</th>
     <th>Actions</th>
   </tr>
