--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,7 +1,9 @@
 <tr>
-  <td><%= link_to(test.title, admin_test_path(test)) %></td>
+  <td><%= render partial: 'form_inline', locals: { test: test } %>
+      <%= link_to(test.title, admin_test_path(test), class: 'js-test-title', data: { test_id: test.id }) %>
+  </td>
   <td><%= test.questions.count %></td>
   <td><%= button_to('start passage', start_test_path(test), method: :get) %></td>
-  <td><%= link_to('edit', edit_admin_test_path(test)) %></td>
+  <td><%= link_to('edit', '#', class: 'js-form-inline-link', data: { test_id: test.id }) %></td>
   <td><%= link_to('delete', admin_test_path(test), data: { confirm: 'Are you sure?' }, method: :delete) %></td>
 </tr>
