--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All tests</h1>
+<%= render partial: 'shared/errors', locals: { resource: @test } %>
 <table>
   <tr>
     <th class="js-sort-by-title pointer">Title <%= octicon "arrow-up", class: 'hide' %>
