--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,8 @@
-<% if resource.errors.present? %>
-  <h2><%= pluralize(resource.errors.count, "error") %></h2>
-  <% resource.errors.each do |error| %>
-    <p><%= error.full_message %></p>
+<% if resource&.errors.present? %>
+  <%= content_tag :div, class: 'js-resource-errors', data: { resource_id: resource.id } do %>
+    <h2><%= pluralize(resource.errors.count, "error") %></h2>
+    <% resource.errors.each do |error| %>
+      <p><%= error.full_message %></p>
+    <% end %>
   <% end %>
 <% end %>
