Add timer to the tests

--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -5,5 +5,7 @@
   <%= form.number_field :level, in: 0..Float::INFINITY %></p>
   <p><%= form.label :category_id, "Category" %>
   <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %></p>
+  <p><%= form.label :timer, "Timer in minutes" %>
+  <%= form.number_field :timer, in: 1..Float::INFINITY %></p>
   <p><%= form.submit %></p>
 <% end %>
