--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -11,10 +11,15 @@
     <td colspan="2"><%= @test.creator.show_initials %></td>
   </tr>
   <tr>
-  <tr>
     <td>Level</td>
     <td colspan="2"><%= @test.level %></td>
   </tr>
+  <% if @test.has_timer? %>
+    <tr>
+      <td>Time limit</td>
+      <td colspan="2"><%= @test.timer %> min</td>
+    </tr>
+  <% end %>
   <tr>
     <th colspan="3">Questions</th>
   </tr>
