--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -15,4 +15,9 @@
                               value: @test_passage.current_question_number } do %>
   <div></div>
 <% end %>
+<% if @test_passage.test.has_timer? %>
+  <%= content_tag :div, '', id: 'js-timer',
+    data: { time_left: @test_passage.time_left,
+            redirect: result_test_passage_path(@test_passage) } %>
+<% end %>
 <%= link_to('Gist question', gists_path(test_passage_id: @test_passage.id), method: :post) %>
